2003-11-18  Braden McDaniel  <braden@endoframe.com>

	Added image basic type.

	* src/libopenvrml/openvrml/ScriptJDK.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/Vrml97Parser.hpp
	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/basetypes.h
	* src/libopenvrml/openvrml/field.cpp
	* src/libopenvrml/openvrml/field.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp

2003-11-18  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp:  On second thought,
	use boost::scoped_ptr to manage gl_capabilities singleton.

2003-11-17  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp:  Use
	boost::shared_ptr with gl_capabilities singleton to eliminate
	memory leak.

2003-11-17  Braden McDaniel  <braden@endoframe.com>

	Merged changes from 0.14.3.

	* NEWS:  Updates for 0.14.3 release.
	* README
	* configure.ac:  Added checks for Mac OS X Rez tool.
	* openvrml.spec.in:  Removed unused ARCH_FLAGS variable from
	"configure" invocation.  Added _smp_mflags macro to invocation
	of make.
	* m4/ax_check_glut.m4:  Added "-lobjc" to GLUT_LIBS when using
	Apple's OpenGL framework.
	* src/libopenvrml/openvrml/Makefile.am:  Incremented library
	version.
	* src/libopenvrml-gl/openvrml/gl/Makefile.am:  Incremented
	library version.
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp:  Made
	gl_capabilities a singleton.  This circumvents the problem of the
	class instance being initialized during static initialization.
	Calls to glGetIntegerv are not valid without a valid GL context.
	* src/lookat/Makefile.am:  Apply Rez tool on Mac OS X.
	* src/lookat/ViewerGlut.cpp:  Corrected include for GLUT
	header.
	* src/lookat/lookat.cpp:  Corrected include for GLUT header.

2003-11-11  Braden McDaniel  <braden@endoframe.com>

	Cruft removal.
